# rusty-gb

./: .gitignore  Cargo.toml  check.py
.github/workflows/: rust.yml
src/: bus.rs  cpu.rs  emulator.rs  fetcher.rs  input.rs  main.rs  mbc.rs  memory.rs  output.rs  ppu.rs  register.rs  rom.rs  window_fetcher.rs
src/output/: dummy.rs  lcd.rs  lcdd.rs  mod.rs  terminal.rs
src/util/: fifo.rs  mod.rs  stec_vec.rs
