[package]
name = "rusty-gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.15.0"
piston = "0.55.0"
piston_window = "0.131.0"
rand = "0.9.0-alpha.1"
time = "0.3.36"
macroquad = "0.4.13"

[profile.dev]
overflow-checks = true
