[package]
name = "rusty-gb"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.17.0"
rand = "0.9.0-alpha.1"
macroquad = "0.4.13"
gamepads = "0.1.6"
bytesize = "1.3.0"

[profile.dev]
overflow-checks = true

[profile.release]
debug = true
opt-level = 3

[target.thumbv6m-none-eabi]
runner = "elf2uf2-rs -d"