[package]
name = "rusty-gb"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.17.0"
rand = "0.9.0-alpha.1"
macroquad = "0.4.14"
gilrs = "0.11.0"
bytesize = "1.3.0"
colored = "3.0.0"
ratatui = "0.29.0"
clap = { version = "4.5.38", features = ["derive"] }
once_cell = "1.19.0"
async-trait = "0.1.88"
miniquad = "0.4.8"

[profile.dev]
overflow-checks = true

[profile.release]
debug = true
opt-level = 3

[target.thumbv6m-none-eabi]
runner = "elf2uf2-rs -d"
